--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -10,11 +10,13 @@
 
 .v-application {
   font-family: SUIT, serif;
+  background-color: $pale-grey !important;
+  height:100vh !important;
 }
 
-.v-card{
-  border:1px solid #d2d2d2 !important;
-  border-radius: 0px !important;
+.v-card {
+  border: 1px solid #d2d2d2 !important;
+  border-radius: 0 !important;
 }
 
 .scroll::-webkit-scrollbar {
@@ -36,9 +38,9 @@
 
 /* set button(top and bottom of the scrollbar) */
 .scroll::-webkit-scrollbar-button {
-  display:none;
+  display: none;
 }
 
 
 $text-field-filled-full-width-outlined-single-line-slot-min-height: 30px !default;
-$text-field-solo-dense-control-min-height: 20px!default;
+$text-field-solo-dense-control-min-height: 20px !default;
